<resources>
    <string name="app_name">Weather</string>
    <string name="city_name">City Name</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="temperature">23</string>
    <string name="condition">Condition</string>
    <string name="time">Time</string>
    <string name="windSpeed">13</string>
    <string name="today_weather">Today\'s Weather Forecast</string>
</resources>